--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -46,8 +46,8 @@
   include_vars: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
 
 - name: Solr | Install maven_artifact module required packages
-  apt:
-    package: "{{ solr_external_libraries_required_packages }}"
+  package:
+    name: "{{ solr_external_libraries_required_packages }}"
     state: present
   notify: restart Solr
   when: solr_external_libraries is defined and solr_external_libraries|length > 0
