--- a/tasks/os-tunning.yml
+++ b/tasks/os-tunning.yml
@@ -1,8 +1,8 @@
 ---
 
 - name: Solr | Install required packages
-  apt:
-    pkg: "{{ item }}"
+  package:
+    name: "{{ item }}"
     state: present
   with_items: "{{ solr_sysctl_required_packages }}"
   when: solr_sysctl_required_packages is defined
